--- a/_publications/7.md
+++ b/_publications/7.md
@@ -1,5 +1,5 @@
 ---
-title: "Diagnosis of Cataract of Humancompanion Animals using Deep Learning"
+title: "Diagnosis of Cataract of Human-companion Animals using Deep Learning"
 collection: publications
 category: manuscripts
 permalink: /publication/7
