--- a/_publications/8.md
+++ b/_publications/8.md
@@ -1,5 +1,5 @@
 ---
-title: "Identification of Increased Echo Intensity in Transthoracic Echocardiography Images Using Deep Learning: A Diagnostic Study."
+title: "Identification of Increased Echo Intensity in Transthoracic Echocardiography Images Using Deep Learning: A Diagnostic Study."
 collection: publications
 category: manuscripts
 permalink: /publication/8
