--- a/_publications/10.md
+++ b/_publications/10.md
@@ -1,5 +1,5 @@
 ---
-title: "Accurate Identification of Intestinal Ischemic Areas Using Hyperspectral Imaging: A Pilot Study Based on Machine Learning and Deep Learning Models"
+title: "Accurate Identification of Intestinal Ischemic Areas Using Hyperspectral Imaging - A Pilot Study Based on Machine Learning and Deep Learning Models"
 collection: publications
 category: manuscripts
 permalink: /publication/10
