--- a/_publications/11.md
+++ b/_publications/11.md
@@ -1,9 +1,9 @@
 ---
-title: "An integrated deep learning framework for effective management of surgical instruments tables based on videos"
+title: "An integrated deep learning framework for effective management of surgical instruments tables based on videos"
 collection: publications
 category: manuscripts
 permalink: /publication/11
-excerpt: 'Yong Ma, Tao Tao, Xuying Ma, Haoxin Li, Zhitao Cheng, Maoji Kang, Yan Zhuang, Linru Zhou, Fan Li, Song Su, Jiali Wu, Yong Tang. An integrated deep learning framework for effective management of surgical instruments tables based on videos. Submitted to Health Care Management Science, 2024. Efficient management of surgical instruments is important to the safety of surgeries. Real-time identification, tracking, and counting surgical instruments during surgeries in surgical rooms is challenging due to the complicated environment. However, the manual management of surgical instruments requires significant efforts and attentions of surgical team, bringing heavy burdens to the team and hinders the safety. We proposed a deep learning framework of novel models specifically centered around the management of surgical instrument tables. We proposed novel models for surgical instrument table segmentation (TrayNet) and instruments classification (ToolNet), respectively. In addition, we employed models of YOLOv8 and BoT-SORT for the hand detection and tracking. Through comparison experiments with other models, we evaluated the effectiveness of our proposed models. TrayNet achieved an mAcc of 94.95% and an mIoU of 90.04%, while ToolNet achieves an mAcc of 98.5% and a precision of 97.59%, respectively. Compared to other models, our TrayNet and ToolNet have demonstrated state-of-the-art performance. We further developed a prototype to evaluate the proposed deep learning framework in intraoperative management of the surgical instrument table. Our prototype demonstrated the capabilities of our deep learning framework in surgical instruments management. The proposed deep learning framework achieved promising performance in instrument table segmentation, hand detection, tracking, and instrument classification, enabling standardized placement and real-time counting of instruments. Such capabilities are valuable for the efficient management of surgical tables, instruments, and operating rooms.'
+excerpt: 'Yong Ma, Tao Tao, Xuying Ma, Haoxin Li, Zhitao Cheng, Maoji Kang, Yan Zhuang, Linru Zhou, Fan Li, Song Su, Jiali Wu, Yong Tang. An integrated deep learning framework for effective management of surgical instruments tables based on videos. Submitted to Health Care Management Science, 2024. Efficient management of surgical instruments is important to the safety of surgeries. Real-time identification, tracking, and counting surgical instruments during surgeries in surgical rooms is challenging due to the complicated environment. However, the manual management of surgical instruments requires significant efforts and attentions of surgical team, bringing heavy burdens to the team and hinders the safety. We proposed a deep learning framework of novel models specifically centered around the management of surgical instrument tables. We proposed novel models for surgical instrument table segmentation (TrayNet) and instruments classification (ToolNet), respectively. In addition, we employed models of YOLOv8 and BoT-SORT for the hand detection and tracking. Through comparison experiments with other models, we evaluated the effectiveness of our proposed models. TrayNet achieved an mAcc of 94.95% and an mIoU of 90.04%, while ToolNet achieves an mAcc of 98.5% and a precision of 97.59%, respectively. Compared to other models, our TrayNet and ToolNet have demonstrated state-of-the-art performance. We further developed a prototype to evaluate the proposed deep learning framework in intraoperative management of the surgical instrument table. Our prototype demonstrated the capabilities of our deep learning framework in surgical instruments management. The proposed deep learning framework achieved promising performance in instrument table segmentation, hand detection, tracking, and instrument classification, enabling standardized placement and real-time counting of instruments. Such capabilities are valuable for the efficient management of surgical tables, instruments, and operating rooms.'
 date: 2024
 venue: 'Health Care Management Science'
 ---
