--- a/_publications/8.md
+++ b/_publications/8.md
@@ -4,7 +4,7 @@ collection: publications
 category: manuscripts
 permalink: /publication/8
 excerpt: 'Yong Tang, Qingyan Yang, Zhitao Cheng, Ying Xu, Kunqi Li, Yan Zhuang, Yong Ma, Fan Li, Song Su, Jiali Wu, Jizhu Xia. Identification of Increased Echo Intensity in Transthoracic Echocardiography Images Using Deep Learning: A Diagnostic Study. Submitted to European Radiology, under review, 2024. Background: The increased echo intensity (EI) of the endocardium in echocardiography is valuable in screening for coronary artery disease (CAD). This study aims to explore the value of deep learning (DL) in diagnosing coronary artery disease. Methods: A total of 217 transthoracic echocardiography (TTE) images from 84 patients were retrospectively collected. The regions of interest (ROI) of the left ventricular wall (LVW) and increased EI were manually annotated by experts. A two-stage DL framework was developed and evaluated. In the first stage, the DL automatically identified the LVW in TTE images. In the second stage, based on the segmentation of LVW obtained in the first stage, the DL further identified the presence of EI within the LVW. The DL framework was trained in a training-validation subset of 163 TTE images using a four-fold cross-validation approach before being tested on an independent testing subset of 54 TTE images. The performance of segmentations was evaluated in terms of metrics such as the was evaluated in terms of intersection over union (IoU), Dice coefficient, and accuracy (ACC). Results: The proposed DL framework could accurately identify the ROI of LVW and EI in TTE images. In the first stage, the DL achieved an average IoU of 0.8389, a Dice coefficient of 0.8460, and an ACC of 0.9009 in the segmentation of LVW. In the second stage, the DL achieved an average IoU of 0.7440, a Dice coefficient of 0.7576, and an ACC of 0.8658 in the segmentation of EI. Conclusion: The proposed two-stage DL framework can accurately identify ROIs of LVW and EI in TTE images with a satisfying accuracy. This shows that the DL framework has the potential values in the analysis of TTE images and eventually benefits the clinical diagnosis of CAD'
-date: 2024
+date: 2024-12-30
 venue: 'European Radiology'
 ---
 
