--- a/_publications/10.md
+++ b/_publications/10.md
@@ -4,6 +4,6 @@ collection: publications
 category: manuscripts
 permalink: /publication/10
 excerpt: "Jiali Wu, Zhitao Cheng, Junan Zhou, Kunqi Li, Piao Wang, Yan Zhuang, Jijun Lu, Linru Zhou, Fan Li, Song Su, Yong Tang. Accurate Identification of Intestinal Ischemic Areas Using Hyperspectral Imaging: A Pilot Study Based on Machine Learning and Deep Learning Models. Submitted to Computers in Biology and Medicine, under review, 2024. Intestinal ischemia is a life-threatening disease that often requires surgical treatment. At present, there is a lack of accurate ways to identify ischemic intestines during surgery. In this study, we developed a non-destructive detection technique for intestinal ischemia based on hyperspectral images and corresponding machine learning and deep learning models. Obtain hyperspectral reflection images in the rat model with a spectral range of 450-950 nm. The spectral information of pixels corresponding to the intestinal regions of four rats’ images was extracted as the dataset. Three rats’ data were selected as the training and validation set, and the data of one rat was used as the test set. Under different wavelength selection strategies, 5-fold cross-validation was adopted on the training and validation set, and then the test set was used to test and select the best model. Finally, when the number of selected wavelengths is 10, 25, 40, 55, and 101 (all), the AUC results of the best models are 0.9551, 0.9764, 0.9726, 0.9756, and 0.9754. The results of this study indicate that AI can accurately identify ischemic intestines on hyperspectral images, providing a new way to accurately identify intestinal ischemia during surgery in the future."
-date: 2024
+date: 2024-12-30
 venue: 'Biology and Medicine'
 ---
