--- a/_publications/14.md
+++ b/_publications/14.md
@@ -4,6 +4,6 @@ collection: publications
 category: manuscripts
 permalink: /publication/14
 excerpt: 'Pinxiong Li; Jian Shu; Liping Pan; Chuanyan Yang; Qingxi Guo; Pan Han; Zeren Luo; Zhitao Cheng; Yanlin Leng; Lu Yang; Yong Tang. Reoperative Contrast-enhanced CT for predicting the Macrotrabecular-Massive subtype and its prognostic significance in hepatocellular carcinoma. Submitted to Insights into Imaging, 2024.'
-date: 2024
+date: 2024-12-30
 venue: 'Insights into Imaging'
 ---
