--- a/_publications/12.md
+++ b/_publications/12.md
@@ -1,7 +1,7 @@
 ---
 title: "Enhancing the diagnosis of thyroid nodules with atypia of undetermined significance using AI-based multimodal fusion: A Retrospective Study"
 collection: publications
-category: manuscripts
+category: processing
 permalink: /publication/12
 excerpt: 'Dehui Qiao, Weiting Huang, Yue Pan, Shijie Wang, Yun Liu, Linru Zhou, Zhitao Cheng, Yong Tang, Chao Li, Wen Tian, Xiangyu Zhou. Enhancing the diagnosis of thyroid nodules with atypia of undetermined significance using AI-based multimodal fusion: A Retrospective Study. Submitted to Thyroid, 2024. Background: There is controversy about managing thyroid nodules with atypia of undetermined significance (AUS). we aimed to construct a model based on artificial intelligence (AI) multimodal data fusion to distinguish between benign and malignant thyroid nodules with AUS. Methods: Collect and analyze preoperative clinical features, ultrasound, and cytology images of 487 patients in a single institution. Clinical features are selected using 5 types of machine learning to determine the optimal model, while ultrasound and cytology images are selected using 9 types of deep learning to determine the optimal model. Then, a model was constructed using a training set of 447 cases, and evaluated on a test set of 40 cases. The evaluation indicators include the area under the receiver operating characteristic curve (AUC), accuracy (ACC), precision, recall, and F1 score. Compare the accuracy of the model and frozen section. Results: The residual model performed the best in ultrasound images, while the Swing transformer model performed the best in cytology images, with AUCs of 0.7415 and 0.781, respectively. Logistic regression performed the best in clinical features with an AUC of 0.71. Next, we fused two models: ultrasound images fused with cytology images, ultrasound images fused with clinical features, and cytology images fused with clinical features, with AUCs of 0.8650, 0.8425, and 0.88, respectively. The fusion of ultrasound images, cytology images, and clinical features has an AUC of 0.935. Finally, we compared the model with frozen section. For cases with a clear diagnosis of frozen section, the accuracy of frozen section was 96.43%, and the accuracy of the fusion model was 89.29%; For cases where frozen section cannot provide a clear diagnosis, using a model for diagnosis has an accuracy rate of 75%. Conclusion: Our multimodal AI model has shown promising results in diagnosis thyroid nodules with AUS.'
 date: 2024-12-30
