--- a/_publications/9.md
+++ b/_publications/9.md
@@ -6,5 +6,6 @@ permalink: /publication/9
 excerpt: 'Li Wang, Zhitao Cheng, Yan Zhuang, Kunqi Li, Fan Li, Song Su, Jian Shu, Jing Chen, Yong Tang. Early assessment of myocardial injury in patients with COVID-19 using a two-stage deep learning framework based on non-contrast chest CT. Submitted to Journal of Cardiovascular Computed Tomography, under review, 2024. Background: With the pandemic of novel coronavirus disease 2019 (COVID-19), risk stratification is particularly important for its prognosis, particularly myocardial injury (MI). Non-contrast chest computed tomography (CT) plays an important role in its diagnosis of lung injury, while unknown for MI with advantage of one-stop evaluation. Methods: A group of 453 patients with COVID-19, including 230 patients with MI and 223 patients without MI, were retrospectively recruited. A two-stage deep learning (DL) framework was developed to first segment the left ventricle (LV) in the non-contrast chest CT images using fully convolutional networks with a ResNet-101 backbone (FCN-ResNet-101) module and then classify the status of MI using densely connected convolutional network with the structure type of 121 (DenseNet-121) module. The framework was trained in a training-validation dataset of 413 patients (MI or non-MI) with a cross-validation approach, and evaluated in a testing dataset of 40 patients. Results: The proposed DL framework accurately obtained the segmentations of LV in non-contrast chest CT images with an intersection over union (IoU) of 0.8041, an accuracy (ACC) of 0.9949, and a Dice coefficient of 0.8672. Based on the segmentation, the DL framework further accurately determined MI status and obtained an area under the curve (AUC) of 0.8618 (95% CI: 0.8049 – 0.9187), an ACC of 0.7763, a sensitivity of 0.8750, a specificity of 0.6071, and an F1 score of 0.8317. Conclusion: DL could determine the status of MI in non-contrast chest CT images of patients with COVID-19, providing one-stop convenience for early screening of MI. '
 date: 2024-12-30
 venue: 'Journal of Cardiovascular Computed Tomography'
+isprocessing: 'True'
 ---
 
