--- a/_publications/16.md
+++ b/_publications/16.md
@@ -4,7 +4,7 @@ collection: publications
 category: processing
 permalink: /publication/16
 excerpt: 'Zhitao Cheng; Mengxian Luo; Yuxi Luo; Yuxiu Ji; Yong Tang; Yanlin Leng; Gaoshan Ma; Jiang Jing; Akira Miyamoto; Yujie Xie; Chi Zhang. Early Postoperative Muscle Atrophy Patterns Following Anterior Cruciate Ligament Reconstruction: Insights from AI-Driven Analysis'
-date: 2024
+date: 2025-01-01
 venue: 'Medical Image Analysis'
 isprocessing: 'True'
 ---
