--- a/_publications/16.md
+++ b/_publications/16.md
@@ -3,7 +3,7 @@ title: "Early Postoperative Muscle Atrophy Patterns Following Anterior Cruciate 
 collection: publications
 category: processing
 permalink: /publication/16
-excerpt: 'Zhitao Cheng; Mengxian Luo; Yuxi Luo; Yuxiu Ji; Yong Tang; Yanlin Leng; Gaoshan Ma; Jiang Jing; Akira Miyamoto; Yujie Xie; Chi Zhang. Early Postoperative Muscle Atrophy Patterns Following Anterior Cruciate Ligament Reconstruction: Insights from AI-Driven Analysis'
+excerpt: 'Qin Luo; Zhitao Cheng; Mengxian Luo; Yuxi Luo; Yuxiu Ji; Yong Tang; Yanlin Leng; Gaoshan Ma; Jiang Jing; Akira Miyamoto; Yujie Xie; Chi Zhang. Early Postoperative Muscle Atrophy Patterns Following Anterior Cruciate Ligament Reconstruction: Insights from AI-Driven Analysis; Muscle atrophy often occurs after anterior cruciate ligament reconstruction (ACLR), but its patterns and severity in the first three months post-surgery are not wellstudied. Understanding muscle changes during this period is crucial for improving postoperative rehabilitation. To address the limitations of manual image processing, we created an AI program that automatically analyzes imaging data and identifies specific atrophy patterns in individual muscles. Our findings indicate significant atrophy in the first-month post-surgery, with the vastus medialis, semimembranosus, semitendinosus, and gracilis muscles shrinking by 14.3%, 10.9%, 53.5%, and 59.3%, respectively. Also, Muscle volume changes in the following 1-3 months showed different patterns. The sartorius and biceps femoris muscles revealed no significant atrophy over three months. The AI program accurately delineated muscle cross-sectional areas, calculated muscle volume, and analyzed tissue contraction changes, improving clinical convenience and precision'
 date: 2025-01-01
 venue: 'Medical Image Analysis'
 isprocessing: 'True'
